--- a/pom.xml
+++ b/pom.xml
@@ -174,6 +174,7 @@
          </goals>
          <configuration>
           <includeDependencySources>true</includeDependencySources>
+          <additionalparam>-Xdoclint:none</additionalparam>
           <show>public</show>
          </configuration>
        </execution>
