--- a/pom.xml
+++ b/pom.xml
@@ -4,9 +4,10 @@
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
-    <artifactId>oss-parent</artifactId>
-    <groupId>org.sonatype.oss</groupId>
-    <version>7</version>
+    <artifactId>verapdf-parent</artifactId>
+    <groupId>org.verapdf</groupId>
+    <version>1.0.0</version>
+    <relativePath>parent/pom.xml</relativePath>
   </parent>
 
   <groupId>org.verapdf</groupId>
@@ -16,35 +17,6 @@
 
   <name>veraPDF PDF/A Validation Library</name>
   <description>veraPDF PDF/A Validation API and core types.</description>
-  <url>https://github.com/veraPDF/veraPDF-library/</url>
-  <inceptionYear>2015</inceptionYear>
-  <organization>
-    <name>The veraPDF Consortium</name>
-    <url>http://www.verapdf.org/</url>
-  </organization>
-  <licenses>
-    <license>
-      <name>GNU General Public License, version 3 (GPL-3.0)</name>
-      <url>http://opensource.org/licenses/GPL-3.0</url>
-      <distribution>repo</distribution>
-    </license>
-    <license>
-      <name>Mozilla Public License 2.0 (MPL-2.0)</name>
-      <url>http://opensource.org/licenses/MPL-2.0</url>
-      <distribution>repo</distribution>
-    </license>
-  </licenses>
-
-  <developers>
-    <developer>
-      <email>carl@openpreservation.org</email>
-      <name>Carl Wilson</name>
-      <url>https://github.com/carlwilson</url>
-      <organization>Open Preservation Foundation</organization>
-      <organizationUrl>http://openpreservation.org</organizationUrl>
-      <id>carlwilson</id>
-    </developer>
-  </developers>
 
   <modules>
     <module>core</module>
@@ -55,192 +27,19 @@
     <connection>scm:git:https://github.com/veraPDF/veraPDF-library.git</connection>
     <developerConnection>scm:git:git@github.com:veraPDF/veraPDF-library.git</developerConnection>
   </scm>
-  <issueManagement>
-    <url>https://github.com/veraPDF/veraPDF-library/issues/</url>
-    <system>GitHub Issues</system>
-  </issueManagement>
-  <ciManagement>
-    <system>OPF Jenkins</system>
-    <url>http://jenkins.opf-labs.org</url>
-  </ciManagement>
-  <distributionManagement>
-    <repository>
-      <id>OPF Artefactory</id>
-      <name>OPF Artefactory-releases</name>
-      <url>http://artifactory.opf-labs.org/artifactory/vera-dev-local</url>
-    </repository>
-  </distributionManagement>
-
-  <repositories>
-    <repository>
-      <snapshots>
-        <enabled>true</enabled>
-      </snapshots>
-      <id>vera-dev</id>
-      <name>Vera development</name>
-      <url>http://artifactory.opf-labs.org/artifactory/vera-dev</url>
-    </repository>
-  </repositories>
-  <pluginRepositories>
-    <pluginRepository>
-      <snapshots>
-        <enabled>false</enabled>
-      </snapshots>
-      <id>vera-dev</id>
-      <name>Vera development</name>
-      <url>http://artifactory.opf-labs.org/artifactory/vera-dev</url>
-    </pluginRepository>
-  </pluginRepositories>
 
   <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-    <java.version>1.7</java.version>
     <sonar.jacoco.itReportPath>${project.basedir}/../target/jacoco-it.exec</sonar.jacoco.itReportPath>
     <sonar.language>java</sonar.language>
-    <maven.surefire.version>2.18.1</maven.surefire.version>
-    <maven.exec.version>1.4.0</maven.exec.version>
-    <mvn.javadoc.version>2.10</mvn.javadoc.version>
-    <mvn.source.version>2.4</mvn.source.version>
-    <mvn.gpg.plugin.version>1.6</mvn.gpg.plugin.version>
     <verapdf.xmp.version>[0.11.100,0.12.0)</verapdf.xmp.version>
     <verapdf.model.version>[0.11.100,0.12.0)</verapdf.model.version>
   </properties>
 
-  <dependencyManagement>
-    <dependencies>
-
-      <dependency>
-        <groupId>junit</groupId>
-        <artifactId>junit</artifactId>
-        <version>4.12</version>
-      </dependency>
-
-      <dependency>
-        <groupId>log4j</groupId>
-        <artifactId>log4j</artifactId>
-        <version>1.2.17</version>
-      </dependency>
-
-      <!-- Mozilla Rhino JavaScript engine -->
-      <dependency>
-        <groupId>rhino</groupId>
-        <artifactId>js</artifactId>
-        <version>1.7R2</version>
-      </dependency>
-
-      <!-- veraPDF Project dependencies -->
-      <dependency>
-        <groupId>org.verapdf</groupId>
-        <artifactId>core</artifactId>
-        <version>${project.version}</version>
-      </dependency>
-
-      <dependency>
-        <groupId>org.verapdf</groupId>
-        <artifactId>pdf-model</artifactId>
-        <version>${verapdf.model.version}</version>
-      </dependency>
-
-      <dependency>
-        <groupId>org.verapdf</groupId>
-        <artifactId>verapdf-xmp-core</artifactId>
-        <version>${verapdf.xmp.version}</version>
-      </dependency>
-
-      <dependency>
-        <groupId>commons-io</groupId>
-        <artifactId>commons-io</artifactId>
-        <version>2.4</version>
-        <scope>test</scope>
-      </dependency>
-
-    </dependencies>
-  </dependencyManagement>
-
-
   <build>
-    <pluginManagement>
-      <plugins>
-
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-assembly-plugin</artifactId>
-          <version>2.5.5</version>
-        </plugin>
-
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-compiler-plugin</artifactId>
-          <version>3.3</version>
-        </plugin>
-
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-deploy-plugin</artifactId>
-          <version>2.8.2</version>
-        </plugin>
-
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-resources-plugin</artifactId>
-          <version>2.7</version>
-        </plugin>
-
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-gpg-plugin</artifactId>
-          <version>${mvn.gpg.plugin.version}</version>
-        </plugin>
-
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-release-plugin</artifactId>
-        </plugin>
-
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-site-plugin</artifactId>
-          <version>3.4</version>
-        </plugin>
-
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-surefire-plugin</artifactId>
-          <version>${maven.surefire.version}</version>
-        </plugin>
-
-        <plugin>
-          <groupId>org.codehaus.mojo</groupId>
-          <artifactId>versions-maven-plugin</artifactId>
-          <version>2.2</version>
-        </plugin>
-
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-source-plugin</artifactId>
-          <version>${mvn.source.version}</version>
-        </plugin>
-
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-javadoc-plugin</artifactId>
-          <version>${mvn.javadoc.version}</version>
-        </plugin>
-
-      </plugins>
-    </pluginManagement>
-
     <plugins>
-
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
-        <configuration>
-          <source>${java.version}</source>
-          <target>${java.version}</target>
-          <encoding>${project.build.sourceEncoding}</encoding>
-        </configuration>
       </plugin>
 
       <plugin>
@@ -256,11 +55,6 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
-        <configuration>
-          <excludes>
-            <exclude>**/*IT.java</exclude>
-          </excludes>
-        </configuration>
       </plugin>
 
       <plugin>
@@ -276,11 +70,13 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-site-plugin</artifactId>
-        <configuration>
-          <attach>true</attach>
-        </configuration>
       </plugin>
 
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>versions-maven-plugin</artifactId>
+        <version>${mvn.versions.version}</version>
+      </plugin>
     </plugins>
   </build>
 
@@ -312,7 +108,6 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-javadoc-plugin</artifactId>
-        <version>2.10.3</version>
         <configuration>
           <show>public</show>
         </configuration>
