--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -126,6 +126,7 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <java.version>1.7</java.version>
+    <maven.build.timestamp.format>yyyy-MM-dd HH:mm</maven.build.timestamp.format>
     <mvn.assembly.version>2.5.5</mvn.assembly.version>
     <mvn.compiler.version>3.3</mvn.compiler.version>
     <mvn.deploy.version>2.8.2</mvn.deploy.version>
@@ -138,9 +139,10 @@
     <mvn.source.version>2.4</mvn.source.version>
     <mvn.surefire.version>2.18.1</mvn.surefire.version>
     <mvn.versions.version>2.2</mvn.versions.version>
-    <verapdf.xmp.version>[0.11.100,0.12.0)</verapdf.xmp.version>
-    <verapdf.model.version>[0.11.100,0.12.0)</verapdf.model.version>
     <verapdf.library.version>[0.11.100,0.12.0)</verapdf.library.version>
+    <verapdf.model.version>[0.11.100,0.12.0)</verapdf.model.version>
+    <verapdf.timestamp>${maven.build.timestamp}</verapdf.timestamp>
+    <verapdf.xmp.version>[0.11.100,0.12.0)</verapdf.xmp.version>
   </properties>
 
   <build>
