--- a/xmp-core-coverage/pom.xml
+++ b/xmp-core-coverage/pom.xml
@@ -18,6 +18,7 @@
     <dependency>
       <groupId>org.verapdf</groupId>
       <artifactId>verapdf-xmp-core</artifactId>
+      <version>${project.version}</version>
     </dependency>
   </dependencies>
 
