--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -10,7 +10,7 @@
 
   <groupId>org.verapdf</groupId>
   <artifactId>verapdf-parent</artifactId>
-  <version>1.0.15</version>
+  <version>1.0.16</version>
   <packaging>pom</packaging>
 
   <name>veraPDF Consortium parent </name>
@@ -243,6 +243,26 @@
               <id>attach-sources</id>
               <goals>
                 <goal>jar</goal>
+              </goals>
+            </execution>
+          </executions>
+        </plugin>
+
+        <plugin>
+          <groupId>org.jacoco</groupId>
+          <artifactId>jacoco-maven-plugin</artifactId>
+          <version>0.7.5.201505241946</version>
+          <executions>
+            <execution>
+              <goals>
+                <goal>prepare-agent</goal>
+              </goals>
+            </execution>
+            <execution>
+              <id>report</id>
+              <phase>test</phase>
+              <goals>
+                <goal>report</goal>
               </goals>
             </execution>
           </executions>
