--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,11 @@
         <artifactId>maven-compiler-plugin</artifactId>
       </plugin>
 
+      <plugin>
+        <groupId>org.jacoco</groupId>
+        <artifactId>jacoco-maven-plugin</artifactId>
+      </plugin>
+
     </plugins>
   </build>
 
