--- a/core/pom.xml
+++ b/core/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <artifactId>verapdf-library</artifactId>
     <groupId>org.verapdf</groupId>
-    <version>0.19.0-SNAPSHOT</version>
+    <version>0.20.0</version>
   </parent>
 
   <artifactId>core</artifactId>
