--- a/codecov.yml
+++ b/codecov.yml
@@ -1,6 +1,8 @@
 codecov:
   token: 66999ab7-48e5-436e-b279-c050983cf78d
   branch: integration
+  notify:
+    require_ci_to_pass: no
 
 coverage:
   precision: 2
