--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 
   <groupId>org.verapdf</groupId>
   <artifactId>verapdf-library</artifactId>
-  <version>0.28.0</version>
+  <version>0.29.0-SNAPSHOT</version>
   <packaging>pom</packaging>
 
   <name>veraPDF PDF/A Validation Library</name>
@@ -29,7 +29,7 @@
   </scm>
 
   <properties>
-    <verapdf.model.version>[0.28.0,0.29.0)</verapdf.model.version>
+    <verapdf.model.version>[0.29.0,0.30.0)</verapdf.model.version>
     <verapdf.xmp.version>[0.11.0,0.12.0)</verapdf.xmp.version>
     <sonar.jacoco.itReportPath>${project.basedir}/../target/jacoco-it.exec</sonar.jacoco.itReportPath>
     <sonar.language>java</sonar.language>
