REL - Release 1.0 - bumped major -> 1.0 for release; - updated model dependency; and - added release 1.0 release notes.

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <artifactId>verapdf-library</artifactId>
     <groupId>org.verapdf</groupId>
-    <version>0.29.0-SNAPSHOT</version>
+    <version>1.0.0</version>
   </parent>
 
   <artifactId>core</artifactId>
