FEAT - JavaDoc update - updated JavaDoc for API methods; - amended Maven scope for xml-unit; and - suppressed externalised string warnings where appropriate;

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -57,6 +57,7 @@
       <groupId>org.xmlunit</groupId>
       <artifactId>xmlunit-core</artifactId>
       <version>2.2.1</version>
+      <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>nl.jqno.equalsverifier</groupId>
