MAINT : Merge veraPDF-xmp - merged the `xmp-core` and `xmp-core-coverage` projects into library; - updated veraPDF-library `pom.xml` to add build module; and - updated `core` module XMP dependency.

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -43,6 +43,7 @@
     <dependency>
       <groupId>org.verapdf</groupId>
       <artifactId>verapdf-xmp-core</artifactId>
+      <version>${project.version}</version>
     </dependency>
     <dependency>
       <groupId>org.mozilla</groupId>
