REL - veraPDF v1.14 - bumped minor version to 1.14; - added v1.14.2 parent POM; and - using parent POM v1.14.2

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -28,7 +28,7 @@
   <parent>
     <artifactId>verapdf-library</artifactId>
     <groupId>org.verapdf</groupId>
-    <version>1.14.0-RC</version>
+    <version>1.14.0</version>
   </parent>
 
   <artifactId>core</artifactId>
