--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -32,7 +32,7 @@
 
   <groupId>org.verapdf</groupId>
   <artifactId>verapdf-parent</artifactId>
-  <version>1.14.1</version>
+  <version>1.14.2</version>
   <packaging>pom</packaging>
 
   <name>veraPDF Consortium parent </name>
@@ -160,6 +160,7 @@
     <mvn.enforcer.version>1.3.1</mvn.enforcer.version>
     <mvn.exec.version>1.4.0</mvn.exec.version>
     <mvn.gpg.plugin.version>1.6</mvn.gpg.plugin.version>
+    <mvn.jarsigner.version>3.0.0</mvn.jarsigner.version>
     <mvn.javadoc.version>3.1.0</mvn.javadoc.version>
     <mvn.project-info.version>2.9</mvn.project-info.version>
     <mvn.release.version>2.5.3</mvn.release.version>
@@ -252,6 +253,12 @@
             <goals>deploy</goals>
             <autoVersionSubmodules>true</autoVersionSubmodules>
           </configuration>
+        </plugin>
+
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-jarsigner-plugin</artifactId>
+          <version>${mvn.jarsigner.version}</version>
         </plugin>
 
         <plugin>
@@ -447,6 +454,19 @@
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-javadoc-plugin</artifactId>
+          </plugin>
+
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-jarsigner-plugin</artifactId>
+            <executions>
+              <execution>
+                <id>sign</id>
+                <goals>
+                  <goal>sign</goal>
+                </goals>
+              </execution>
+            </executions>
           </plugin>
 
           <plugin>
