MAINT: Added codacy project key.

--- a/.github/workflows/test-pr.yml
+++ b/.github/workflows/test-pr.yml
@@ -48,6 +48,7 @@ jobs:
       - name: Codacy coverage reporting
         uses: codacy/codacy-coverage-reporter-action@v1
         with:
+          project-token: ${{ secrets.CODACY_PROJECT_TOKEN }}
           coverage-reports: core/target/site/jacoco/jacoco.xml
       - name: Codacy analysis reporting
         uses: codacy/codacy-analysis-cli-action@4.0.0
