MAINT: Trigger now only on PR events.

--- a/.github/workflows/test-pr.yml
+++ b/.github/workflows/test-pr.yml
@@ -1,8 +1,8 @@
 name: PR QA
 
-on: [push]
-  # pull_request:
-  #   types: [opened, edited, reopened]
+on:
+  pull_request:
+    types: [opened, edited, reopened]
 
 jobs:
   build:
