--- a/core/src/main/resources/org/verapdf/processor/logging.properties
+++ b/core/src/main/resources/org/verapdf/processor/logging.properties
@@ -3,6 +3,7 @@ handlers = org.verapdf.core.utils.LogsFileHandler java.util.logging.ConsoleHandl
 
 java.util.logging.ConsoleHandler.level = INFO
 java.util.logging.ConsoleHandler.formatter = java.util.logging.SimpleFormatter
+java.util.logging.ConsoleHandler.filter = org.verapdf.core.utils.ConsoleLogsFilter
 
 org.verapdf.core.utils.LogsFileHandler.level = ALL
 # creates file in temp dir, adds process id to the beginning of filename and pattern as a suffix
